Small format adjustment, parter link updates

--- a/index.html
+++ b/index.html
@@ -1327,9 +1327,9 @@
                                                 <span
                                                   data-offset-key="49uok-0-0"
                                                   ><span data-text="true"
-                                                    >Mondays at 2pm |
+                                                    >Mondays at 2 |
                                                     Tuesday-Saturday at
-                                                    4pm</span
+                                                    4</span
                                                   ></span
                                                 >
                                               </div>
@@ -12269,7 +12269,7 @@
                                                 class="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                                               >
                                                 <a
-                                                  href="https://active.social/social-share/5z1dy"
+                                                  href="https://active.social/social-share/tbp0b"
                                                   style="
                                                     color: #002349;
                                                     text-decoration: underline;
@@ -12372,7 +12372,7 @@
                                                 class="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                                               >
                                                 <a
-                                                  href="https://active.social/social-share/eg7ac"
+                                                  href="https://active.social/social-share/itc52"
                                                   style="
                                                     color: #002349;
                                                     text-decoration: underline;
@@ -12405,7 +12405,7 @@
                                                 class="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                                               >
                                                 <a
-                                                  href="https://active.social/social-share/fo76l"
+                                                  href="https://active.social/social-share/7nrmm"
                                                   style="
                                                     color: #002349;
                                                     text-decoration: underline;
@@ -12541,7 +12541,7 @@
                                                 class="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                                               >
                                                 <a
-                                                  href="https://active.social/social-share/ph00g"
+                                                  href="google.com"
                                                   style="
                                                     color: #002349;
                                                     text-decoration: underline;
@@ -12574,7 +12574,7 @@
                                                 class="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                                               >
                                                 <a
-                                                  href="https://active.social/social-share/78f6g"
+                                                  href="https://active.social/social-share/kh28k"
                                                   style="
                                                     color: #002349;
                                                     text-decoration: underline;
@@ -12611,7 +12611,7 @@
                                                 class="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                                               >
                                                 <a
-                                                  href="https://ourmailer.com/t/cr/AQi9qgMQzaakBxi4k4WnAStemgm9YLytrURPtrxhzCaW7BO3JYdzxnBNgwWBL9hL"
+                                                  href="https://ourmailer.com/t/cr/AQi9qgMQtMWmBxi4k4WnARfl4DqnJCq2w0nseTE2yMKizOq9WrHdnYFBd1HWYhNR"
                                                   style="
                                                     color: #002349;
                                                     text-decoration: underline;
@@ -12802,7 +12802,7 @@
                                               class="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                                             >
                                               <a
-                                                href="https://view-email.activepipe.com/campaign_preview/3381e22f-fe42-4554-b9d9-55e5350b0758"
+                                                href="https://view-email.activepipe.com/campaign_preview/ea68d60b-a024-4a5b-ba91-69305a82f8ee"
                                                 style="
                                                   color: #002349;
                                                   text-decoration: underline;
@@ -12864,7 +12864,7 @@
                                               class="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                                             >
                                               <a
-                                                href="https://active.social/social-share/j4b4e"
+                                                href="https://active.social/social-share/hwbv1"
                                                 style="
                                                   color: #002349;
                                                   text-decoration: underline;
@@ -12989,7 +12989,7 @@
                                                 class="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                                               >
                                                 <a
-                                                  href="https://active.social/social-share/m4fod"
+                                                  href="https://active.social/social-share/xk9ky"
                                                   style="
                                                     color: #002349;
                                                     text-decoration: underline;
@@ -13052,7 +13052,7 @@
                                               class="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                                             >
                                               <a
-                                                href="https://ourmailer.com/t/cr/AQjgthMQq9mEARiKycpDSV6qT_KNmnefqWCiF4m8eldSje-PAqpOUb3A-GRDm-I"
+                                                href="https://ourmailer.com/t/cr/AQjgthMQkP2FARiKycpDBsu4Y9VfkAXmfZjdENIAxgRhGo1abYcrnHEkDuvTtUw"
                                                 style="
                                                   color: #002349;
                                                   text-decoration: underline;
@@ -13114,7 +13114,7 @@
                                               class="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                                             >
                                               <a
-                                                href="https://active.social/social-share/cl8bp"
+                                                href="https://active.social/social-share/kx7dp"
                                                 style="
                                                   color: #002349;
                                                   text-decoration: underline;
