last partner link update for Jan

--- a/index.html
+++ b/index.html
@@ -12372,7 +12372,7 @@
                                                 class="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                                               >
                                                 <a
-                                                  href="https://active.social/social-share/itc52"
+                                                  href="https://active.social/social-share/4ach4"
                                                   style="
                                                     color: #002349;
                                                     text-decoration: underline;
@@ -12438,7 +12438,7 @@
                                                 class="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                                               >
                                                 <a
-                                                  href="https://conta.cc/4absO3x"
+                                                  href="https://conta.cc/3YZBnqZ"
                                                   style="
                                                     color: #002349;
                                                     text-decoration: underline;
