partner link updates

--- a/index.html
+++ b/index.html
@@ -15468,7 +15468,7 @@
                                                 class="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                                               >
                                                 <a
-                                                  href="https://active.social/social-share/tbp0b"
+                                                  href="https://active.social/social-share/9xov6"
                                                   style="
                                                     color: #002349;
                                                     text-decoration: underline;
@@ -15571,7 +15571,7 @@
                                                 class="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                                               >
                                                 <a
-                                                  href="https://active.social/social-share/qedsn"
+                                                  href="https://active.social/social-share/mpxym"
                                                   style="
                                                     color: #002349;
                                                     text-decoration: underline;
@@ -15740,7 +15740,7 @@
                                                 class="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                                               >
                                                 <a
-                                                  href="https://active.social/social-share/x662l"
+                                                  href="https://active.social/social-share/r7lca"
                                                   style="
                                                     color: #002349;
                                                     text-decoration: underline;
@@ -15773,7 +15773,7 @@
                                                 class="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                                               >
                                                 <a
-                                                  href="https://active.social/social-share/kh28k"
+                                                  href="https://active.social/social-share/is5d5"
                                                   style="
                                                     color: #002349;
                                                     text-decoration: underline;
@@ -15970,7 +15970,7 @@
                                               class="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                                             >
                                               <a
-                                                href="https://google.com/"
+                                                href="https://clintonselfridgegroup.com/sothebys-calendar-partners/"
                                                 style="
                                                   color: #002349;
                                                   text-decoration: underline;
@@ -16001,7 +16001,7 @@
                                               class="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                                             >
                                               <a
-                                                href="https://view-email.activepipe.com/campaign_preview/ea68d60b-a024-4a5b-ba91-69305a82f8ee"
+                                                href="https://view-email.activepipe.com/campaign_preview/aafa9bd7-9f87-4d1e-ae23-e22ad29e2584"
                                                 style="
                                                   color: #002349;
                                                   text-decoration: underline;
@@ -16188,7 +16188,7 @@
                                                 class="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                                               >
                                                 <a
-                                                  href="https://active.social/social-share/xk9ky"
+                                                  href="https://active.social/social-share/xqtfu"
                                                   style="
                                                     color: #002349;
                                                     text-decoration: underline;
@@ -16313,7 +16313,7 @@
                                               class="public-DraftStyleDefault-block public-DraftStyleDefault-ltr"
                                             >
                                               <a
-                                                href="https://active.social/social-share/kx7dp"
+                                                href="https://active.social/social-share/3lsv8"
                                                 style="
                                                   color: #002349;
                                                   text-decoration: underline;
